# upr-matcher

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: backend.yaml  common.yaml  frontend.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/data/: README.md
backend/fmsi_un_recommendations/: __init__.py  api.py  progress.py  recommendation_processing.py  reranker.py  settings.py  similarity_search.py  utils.py  worker.py
backend/fmsi_un_recommendations/db/: __init__.py  base.py  local.py  postgres.py
backend/prompts/: README.md  recommendation_extraction.txt
backend/tests/: test_recommendation_processing.py
frontend/: .pre-commit-config.yaml  Dockerfile  README.md  biome.json  index.html  nginx.conf.template  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: DocumentUpload.tsx  DocumentViewer.tsx  DownloadButton.tsx  PdfViewer.tsx  PreviousRuns.tsx  RecommendationsTable.tsx  SummarySection.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/styles/: docx-preview.css
